--- a/src/SarifWeb/Views/Shared/_Layout.cshtml
+++ b/src/SarifWeb/Views/Shared/_Layout.cshtml
@@ -1,52 +1,58 @@
-﻿<!DOCTYPE html><html>
+﻿<!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
+    <link href="~/Content/Main.css" rel="stylesheet" />
     @Scripts.Render("~/bundles/modernizr")
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <script type="text/javascript">
-        var appInsights=window.appInsights||function(config){
-            function r(config){t[config]=function(){var i=arguments;t.queue.push(function(){t[config].apply(t,i)})}}var t={config:config},u=document,e=window,o="script",s=u.createElement(o),i,f;for(s.src=config.url||"//az416426.vo.msecnd.net/scripts/a/ai.0.js",u.getElementsByTagName(o)[0].parentNode.appendChild(s),t.cookie=u.cookie,t.queue=[],i=["Event","Exception","Metric","PageView","Trace"];i.length;)r("track"+i.pop());return r("setAuthenticatedUserContext"),r("clearAuthenticatedUserContext"),config.disableExceptionTracking||(i="onerror",r("_"+i),f=e[i],e[i]=function(config,r,u,e,o){var s=f&&f(config,r,u,e,o);return s!==!0&&t["_"+i](config,r,u,e,o),s}),t
-        }({
-            instrumentationKey:"b8a0a0f2-9e34-4fa4-b813-20f7f3d77674"
+        $(function () {
+            $("button").on("click", function () {
+                var sender = $(this);
+                var url = sender.attr("href");
+                var target = sender.attr("target");
+
+                window.open(url, target);
+            });
         });
-        
-        window.appInsights=appInsights;
+
+        var appInsights = window.appInsights || function (config) {
+            function r(config) { t[config] = function () { var i = arguments; t.queue.push(function () { t[config].apply(t, i) }) } } var t = { config: config }, u = document, e = window, o = "script", s = u.createElement(o), i, f; for (s.src = config.url || "//az416426.vo.msecnd.net/scripts/a/ai.0.js", u.getElementsByTagName(o)[0].parentNode.appendChild(s), t.cookie = u.cookie, t.queue = [], i = ["Event", "Exception", "Metric", "PageView", "Trace"]; i.length;)r("track" + i.pop()); return r("setAuthenticatedUserContext"), r("clearAuthenticatedUserContext"), config.disableExceptionTracking || (i = "onerror", r("_" + i), f = e[i], e[i] = function (config, r, u, e, o) { var s = f && f(config, r, u, e, o); return s !== !0 && t["_" + i](config, r, u, e, o), s }), t
+        }({
+            instrumentationKey: "b8a0a0f2-9e34-4fa4-b813-20f7f3d77674"
+        });
+
+        window.appInsights = appInsights;
         appInsights.trackPageView();
     </script>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("SARIF Web", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <!--<li>@Html.ActionLink("About", "About", "Home")</li>-->
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Validator", "Index", "Validation")</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
+    <div id="pageContainer">
+        <header>
+            <div class="header-site-title">SARIF</div>
+            <div class="header-version-badge">WEB BETA</div>
+            <nav class="header-nav-strip">
+                <div id="heroNavItems" class="header-nav-item">
+                    <a href="/#Specification">Specification</a>
+                    <a href="/#ToolsLibraries">Tools &amp; Libraries</a>
+                    <a href="/#Viewers">Viewers</a>
+                </div>
+            </nav>
+            <nav id="headerNavValidator" class="header-nav-item">
+                @Html.ActionLink("Validator", "Index", "Validation")
+            </nav>
+        </header>
+
         @RenderBody()
-        <hr />
+
         <footer>
             <p>Copyright &copy; Microsoft Corporation. All rights reserved.</p>
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
 </html>
