--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -195,7 +195,7 @@
                 For viewing and taking-action-on SARIF files within Visual Studio. Analysis results show up in the Error List, result details in a dockable tool window, and the results locations are overlayed on the original code (when available).
             </div>
             <div class="viewer-screenshot">
-                <img src="../Images/Screenshots/MiddleEast.png" alt="Visual Studio extension" />
+                <img src="../Images/Screenshots/VSViewer.png" alt="Visual Studio extension" />
             </div>
             <div class="viewer-buttons">
                 <button href="https://marketplace.visualstudio.com/items?itemName=WDGIS.MicrosoftSarifViewer" target="_blank">Install</button>
@@ -211,7 +211,7 @@
                 Same experience as the Visual Studio extension, but for those using Visual Studio Code.
             </div>
             <div class="viewer-screenshot">
-                <img src="../Images/Screenshots/Elisabeth-and-the-Tornado.jpg" alt="VS Code extension" />
+                <img src="../Images/Screenshots/VSCodeViewer.png" alt="VS Code extension" />
             </div>
             <div class="viewer-buttons">
                 <button href="https://marketplace.visualstudio.com/items?itemName=MS-SarifVSCode.sarif-viewer" target="_blank">Install</button>
@@ -227,7 +227,7 @@
                 An online viewer good for quickly browsing of SARIF files as well as triaging analysis results. Also available as a component to integrate into your own site or app.
             </div>
             <div class="viewer-screenshot">
-                <img src="../Images/Screenshots/FutureExplorer.jpg" alt="Web Viewer A" />
+                <img src="../Images/Screenshots/WebViewerA.png" alt="Web Viewer A" />
             </div>
             <div class="viewer-buttons">
                 <button href="https://sarifview/disco/" target="_blank">Try</button>
@@ -243,7 +243,7 @@
                 Another online viewer with an alternate viewing experience.
             </div>
             <div class="viewer-screenshot">
-                <img src="../Images/Screenshots/PoisonDartFrog.jpg" alt="Web Viewer B" />
+                <img src="../Images/Screenshots/WebViewerB.png" alt="Web Viewer B" />
             </div>
             <div class="viewer-buttons">
                 <button href="https://sarifview/" formtarget="_blank">Try</button>
@@ -254,13 +254,13 @@
 </section>
 
 <script type="text/javascript">
-        $(function () {
-            $("button").on("click", function () {
-                var sender = $(this);
-                var url = sender.attr("href");
-                var target = sender.attr("target");
+    $(function () {
+        $("button").on("click", function () {
+            var sender = $(this);
+            var url = sender.attr("href");
+            var target = sender.attr("target");
 
-                window.open(url, target);
-            });
+            window.open(url, target);
+        });
     });
 </script>
