Swap collaborator logos + ~/paths

--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <section id="hero">
     <div id="heroContentGrid">
-        <div id="heroLogo"><img src="../Images/triskelion.png" /></div>
+        <div id="heroLogo"><img src="~/Images/triskelion.png" /></div>
         <div id="heroTitle">SARIF</div>
         <div id="heroTagline">
             The Static Analysis Results Interchange Format (SARIF)
@@ -48,19 +48,19 @@
         The SARIF project is supported by a large group of industry contributors, including quick brown foxes and lazy dogs.
     </div>
     <div id="collabSectionButtons">
-        <img src="../Images/Logos/3M.png" alt="3M" />
-        <img src="../Images/Logos/Adobe.png" alt="Adobe" />
-        <img src="../Images/Logos/Amazon.png" alt="Amazon" />
-        <img src="../Images/Logos/AT&T.png" alt="AT&T" />
-        <img src="../Images/Logos/BMW.png" alt="BMW" />
-        <img src="../Images/Logos/Dell.png" alt="Dell" />
-        <img src="../Images/Logos/EMC2.png" alt="EMC2" />
-        <img src="../Images/Logos/Energizer.png" alt="Energizer" />
-        <img src="../Images/Logos/Expedia.png" alt="Expedia" />
-        <img src="../Images/Logos/Microsoft.png" alt="Microsoft" />
-        <img src="../Images/Logos/NFL.png" alt="NFL" />
-        <img src="../Images/Logos/Visa.png" alt="Visa" />
-        <img src="../Images/Logos/Zillow.png" alt="Zillow" />
+        <img src="~/Images/Logos/3M.png" alt="3M" />
+        <img src="~/Images/Logos/Adobe.png" alt="Adobe" />
+        <img src="~/Images/Logos/Amazon.png" alt="Amazon" />
+        <img src="~/Images/Logos/BMW.png" alt="BMW" />
+        <img src="~/Images/Logos/Dell.png" alt="Dell" />
+        <img src="~/Images/Logos/EMC2.png" alt="EMC2" />
+        <img src="~/Images/Logos/Expedia.png" alt="Expedia" />
+        <img src="~/Images/Logos/HPE.png" alt="Hewlett Packard Enterprise" />
+        <img src="~/Images/Logos/MicroFocus.png" alt="Micro Focus" />
+        <img src="~/Images/Logos/Microsoft.png" alt="Microsoft" />
+        <img src="~/Images/Logos/Semmle.png" alt="Semmle" />
+        <img src="~/Images/Logos/Visa.png" alt="Visa" />
+        <img src="~/Images/Logos/Zillow.png" alt="Zillow" />
     </div>
 </section>
 
@@ -90,7 +90,7 @@
                     <div id="toolsItemSdk" class="tools-item-description"><b>SDK</b> - Object model and utilities for reading and writing files in the SARIF format.</div>
                     <button id="toolsItemSdkLink" href="https://www.nuget.org/packages/Sarif.Sdk/2.0.0-csd.1.0.2" target="_blank" class="tools-item-button">
                         <div class="tools-item-button-icon">
-                            <img src="../Images/Nuget.png" />
+                            <img src="~/Images/Nuget.png" />
                         </div>
                         <div>View Package</div>
                     </button>
@@ -99,7 +99,7 @@
                     <div id="toolsItemSdk" class="tools-item-description"><b>Driver</b> - Framework for creating a command line analysis tool which produces files in the SARIF format.</div>
                     <button id="toolsItemSdkLink" href="https://www.nuget.org/packages/Sarif.Driver/2.0.0-csd.1.0.2" target="_blank" class="tools-item-button">
                         <div class="tools-item-button-icon">
-                            <img src="../Images/Nuget.png" />
+                            <img src="~/Images/Nuget.png" />
                         </div>
                         <div>View Package</div>
                     </button>
@@ -108,7 +108,7 @@
                     <div id="toolsItemSdk" class="tools-item-description"><b>Converters</b> - classes for converting the output of various static analysis tools to the SARIF format.</div>
                     <button id="toolsItemSdkLink" href="https://www.nuget.org/packages/Sarif.Converters/2.0.0-csd.1.0.2" target="_blank" class="tools-item-button">
                         <div class="tools-item-button-icon">
-                            <img src="../Images/Nuget.png" />
+                            <img src="~/Images/Nuget.png" />
                         </div>
                         <div>View Package</div>
                     </button>
@@ -117,7 +117,7 @@
                     <div id="toolsItemSdk" class="tools-item-description"><b>Multitool</b> - Multi-purpose command line tool for analyzing and manipulating SARIF files.</div>
                     <button id="toolsItemSdkLink" href="https://www.nuget.org/packages/Sarif.Multitool/2.0.0-csd.1.0.2" target="_blank" class="tools-item-button">
                         <div class="tools-item-button-icon">
-                            <img src="../Images/Nuget.png" />
+                            <img src="~/Images/Nuget.png" />
                         </div>
                         <div>View Package</div>
                     </button>
@@ -126,7 +126,7 @@
                     <div id="toolsItemSdk" class="tools-item-description"><b>Interop</b> - Library that enables Visual Studio extensions to easily consume services exposed by the SARIF Viewer for VS.</div>
                     <button id="toolsItemSdkLink" href="https://www.nuget.org/packages/Sarif.Viewer.Interop/2.0.0-csd.1.0.2" target="_blank" class="tools-item-button">
                         <div class="tools-item-button-icon">
-                            <img src="../Images/Nuget.png" />
+                            <img src="~/Images/Nuget.png" />
                         </div>
                         <div>View Package</div>
                     </button>
@@ -195,7 +195,7 @@
                 For viewing and taking-action-on SARIF files within Visual Studio. Analysis results show up in the Error List, result details in a dockable tool window, and the results locations are overlayed on the original code (when available).
             </div>
             <div class="viewer-screenshot">
-                <img src="../Images/Screenshots/VSViewer.png" alt="Visual Studio extension" />
+                <img src="~/Images/Screenshots/VSViewer.png" alt="Visual Studio extension" />
             </div>
             <div class="viewer-buttons">
                 <button href="https://marketplace.visualstudio.com/items?itemName=WDGIS.MicrosoftSarifViewer" target="_blank">Install</button>
@@ -211,7 +211,7 @@
                 Same experience as the Visual Studio extension, but for those using Visual Studio Code.
             </div>
             <div class="viewer-screenshot">
-                <img src="../Images/Screenshots/VSCodeViewer.png" alt="VS Code extension" />
+                <img src="~/Images/Screenshots/VSCodeViewer.png" alt="VS Code extension" />
             </div>
             <div class="viewer-buttons">
                 <button href="https://marketplace.visualstudio.com/items?itemName=MS-SarifVSCode.sarif-viewer" target="_blank">Install</button>
@@ -227,7 +227,7 @@
                 An online viewer good for quickly browsing of SARIF files as well as triaging analysis results. Also available as a component to integrate into your own site or app.
             </div>
             <div class="viewer-screenshot">
-                <img src="../Images/Screenshots/WebViewerA.png" alt="Web Viewer A" />
+                <img src="~/Images/Screenshots/WebViewerA.png" alt="Web Viewer A" />
             </div>
             <div class="viewer-buttons">
                 <button href="https://sarifview/disco/" target="_blank">Try</button>
@@ -243,7 +243,7 @@
                 Another online viewer with an alternate viewing experience.
             </div>
             <div class="viewer-screenshot">
-                <img src="../Images/Screenshots/WebViewerB.png" alt="Web Viewer B" />
+                <img src="~/Images/Screenshots/WebViewerB.png" alt="Web Viewer B" />
             </div>
             <div class="viewer-buttons">
                 <button href="https://sarifview/" formtarget="_blank">Try</button>
